@startuml

class "Thread" as T {
}

package treff_server <<Frame>> {
    class "Server" as S {
        -port: int
        -accountManager: AccountManager

        +main(args: Array of String)
        -Server(port:int) <<constructor>>
    }

    class "ConnectionHandler" as CH {
        -socket: Socket
        -accountManager: AccountManager

        +ConnectionHandler(socket:Socket, accountManager:AccountManager) <<constructor>>
        +run()
    }

    class "RequestHandler" as RH {
        -request: String
        -accountManager: AccountManager
        -didRun: boolean

        +RequestHandler(request: String, accountManager:AccountManager) <<constructor>>
        +run(): String
    }



    package interfaces <<Frame>> {
        interface "AccountUpdateListener" as AUL {
                onUpdateAdded(update: Update)
            }
        interface "AccountManager" as AM {
            hasAccountWithUsername(String username): boolean
            hasAccountWithEmail(String email): boolean
            getAccountByUsername(String username): Account
            getAccountByEmail(String email): Account
            createAccount(String username, String email, String password): Account
        }


    }

    package sql <<Frame>> {
        class "EntityManagerSQL" as EMS <<singleton>>{
            -instance: EntityManagerSQL
            -loadedAccountsByID: Map<Integer, Account>

            -EntityManagerSQL() <<constructor>>
            +initialize()
        }
    }

    package update_notifier <<Frame>> {
            class "PersistentConnection" as PC {
                out:PrintWriter
                -observedAccount: Account

                +PersistentConnection(out:PrintWriter, accountManager:AccountManager, userID:int) <<constructor>>
                +onUpdateAdded(update: Update)
            }
        }


}

T <|-- CH
    AM <|.down. EMS
    AUL <|.down. PC
    S "1" -right-> "n" CH : creates
    CH "1" --> "n" RH : creates
    S "1" --> "1" AM : has
    CH "n" --> "1" AM : has
    RH "n" -left-> "1" AM : has

    CH "1" -> "1" AUL : has
@enduml
